[gd_scene load_steps=83 format=2]

[ext_resource path="res://assets/imgs/player/klay_up_1.png" type="Texture" id=1]
[ext_resource path="res://assets/imgs/player/klay_running_1.png" type="Texture" id=2]
[ext_resource path="res://assets/imgs/player/klay_running_6.png" type="Texture" id=3]
[ext_resource path="res://assets/imgs/player/klay_idle_4.png" type="Texture" id=4]
[ext_resource path="res://assets/imgs/player/klay_running_4.png" type="Texture" id=5]
[ext_resource path="res://assets/imgs/player/klay_down_1.png" type="Texture" id=6]
[ext_resource path="res://assets/imgs/player/klay_ball_1.png" type="Texture" id=7]
[ext_resource path="res://assets/imgs/player/klay_idle_1.png" type="Texture" id=8]
[ext_resource path="res://assets/imgs/player/klay_to_boi_4.png" type="Texture" id=9]
[ext_resource path="res://assets/imgs/player/klay_to_ball_2.png" type="Texture" id=10]
[ext_resource path="res://assets/imgs/player/klay_to_boi_2.png" type="Texture" id=11]
[ext_resource path="res://assets/imgs/player/klay_running_5.png" type="Texture" id=12]
[ext_resource path="res://assets/imgs/player/klay_idle_6.png" type="Texture" id=13]
[ext_resource path="res://assets/imgs/player/klay_idle_8.png" type="Texture" id=14]
[ext_resource path="res://assets/imgs/player/klay_running_2.png" type="Texture" id=15]
[ext_resource path="res://assets/imgs/player/klay_running_3.png" type="Texture" id=16]
[ext_resource path="res://assets/imgs/player/klay_running_7.png" type="Texture" id=17]
[ext_resource path="res://assets/imgs/player/klay_running_8.png" type="Texture" id=18]
[ext_resource path="res://assets/imgs/player/klay_to_boi_1.png" type="Texture" id=19]
[ext_resource path="res://assets/imgs/player/klay_to_ball_1.png" type="Texture" id=20]
[ext_resource path="res://assets/imgs/player/klay_idle_5.png" type="Texture" id=21]
[ext_resource path="res://assets/imgs/player/klay_swimming_8.png" type="Texture" id=22]
[ext_resource path="res://assets/imgs/player/klay_idle_2.png" type="Texture" id=23]
[ext_resource path="res://assets/imgs/player/klay_idle_7.png" type="Texture" id=24]
[ext_resource path="res://assets/imgs/player/klay_to_ball_3.png" type="Texture" id=25]
[ext_resource path="res://assets/imgs/player/klay_to_ball_4.png" type="Texture" id=26]
[ext_resource path="res://assets/imgs/player/klay_idle_3.png" type="Texture" id=27]
[ext_resource path="res://assets/imgs/player/klay_to_boi_3.png" type="Texture" id=28]
[ext_resource path="res://scenes/player/klay.gd" type="Script" id=29]
[ext_resource path="res://assets/imgs/player/klay_swimming_4.png" type="Texture" id=30]
[ext_resource path="res://assets/imgs/player/klay_swimming_1.png" type="Texture" id=31]
[ext_resource path="res://assets/imgs/player/klay_swimming_2.png" type="Texture" id=32]
[ext_resource path="res://assets/imgs/player/klay_swimming_3.png" type="Texture" id=33]
[ext_resource path="res://assets/imgs/player/klay_swimming_7.png" type="Texture" id=34]
[ext_resource path="res://assets/imgs/player/klay_swimming_5.png" type="Texture" id=35]
[ext_resource path="res://assets/imgs/player/klay_swimming_6.png" type="Texture" id=36]
[ext_resource path="res://assets/audio/sfx/player/footsteps.wav" type="AudioStream" id=37]
[ext_resource path="res://assets/audio/sfx/player/land.wav" type="AudioStream" id=38]
[ext_resource path="res://assets/audio/sfx/player/jump.wav" type="AudioStream" id=39]
[ext_resource path="res://assets/imgs/player/smol_klay_down_1.png" type="Texture" id=40]
[ext_resource path="res://assets/imgs/player/smol_klay_idle_1.png" type="Texture" id=41]
[ext_resource path="res://assets/imgs/player/smol_klay_up_1.png" type="Texture" id=42]
[ext_resource path="res://assets/imgs/player/smol_klay_idle_3.png" type="Texture" id=43]
[ext_resource path="res://assets/imgs/player/smol_klay_idle_4.png" type="Texture" id=44]
[ext_resource path="res://assets/imgs/player/smol_klay_idle_5.png" type="Texture" id=45]
[ext_resource path="res://assets/imgs/player/smol_klay_idle_6.png" type="Texture" id=46]
[ext_resource path="res://assets/imgs/player/smol_klay_idle_2.png" type="Texture" id=47]
[ext_resource path="res://assets/imgs/player/smol_klay_idle_7.png" type="Texture" id=48]
[ext_resource path="res://assets/imgs/player/smol_klay_idle_8.png" type="Texture" id=49]
[ext_resource path="res://assets/imgs/player/smol_klay_running_4.png" type="Texture" id=50]
[ext_resource path="res://assets/imgs/player/smol_klay_running_2.png" type="Texture" id=51]
[ext_resource path="res://assets/imgs/player/smol_klay_running_5.png" type="Texture" id=52]
[ext_resource path="res://assets/imgs/player/smol_klay_running_3.png" type="Texture" id=53]
[ext_resource path="res://assets/imgs/player/smol_klay_running_6.png" type="Texture" id=54]
[ext_resource path="res://assets/imgs/player/smol_klay_running_8.png" type="Texture" id=55]
[ext_resource path="res://assets/imgs/player/smol_klay_running_1.png" type="Texture" id=56]
[ext_resource path="res://assets/imgs/player/smol_klay_running_7.png" type="Texture" id=57]
[ext_resource path="res://assets/imgs/player/smol_klay_to_ball_3.png" type="Texture" id=58]
[ext_resource path="res://assets/imgs/player/smol_klay_to_ball_1.png" type="Texture" id=59]
[ext_resource path="res://assets/imgs/player/smol_klay_to_boi_1.png" type="Texture" id=60]
[ext_resource path="res://assets/imgs/player/smol_klay_to_boi_2.png" type="Texture" id=61]
[ext_resource path="res://assets/imgs/player/smol_klay_to_ball_2.png" type="Texture" id=62]
[ext_resource path="res://assets/imgs/player/smol_klay_to_ball_4.png" type="Texture" id=63]
[ext_resource path="res://assets/imgs/player/smol_klay_fall_1.png" type="Texture" id=64]
[ext_resource path="res://assets/imgs/player/smol_klay_to_boi_4.png" type="Texture" id=65]
[ext_resource path="res://assets/imgs/player/smol_klay_to_boi_3.png" type="Texture" id=66]
[ext_resource path="res://assets/imgs/player/warp_4.png" type="Texture" id=67]
[ext_resource path="res://assets/imgs/player/warp_8.png" type="Texture" id=68]
[ext_resource path="res://assets/imgs/player/warp_2.png" type="Texture" id=69]
[ext_resource path="res://assets/imgs/player/warp_5.png" type="Texture" id=70]
[ext_resource path="res://assets/imgs/player/warp_6.png" type="Texture" id=71]
[ext_resource path="res://assets/imgs/player/warp_7.png" type="Texture" id=72]
[ext_resource path="res://assets/imgs/player/warp_1.png" type="Texture" id=73]
[ext_resource path="res://assets/imgs/player/warp_3.png" type="Texture" id=74]
[ext_resource path="res://assets/imgs/player/death_3.png" type="Texture" id=75]
[ext_resource path="res://assets/imgs/player/death_2.png" type="Texture" id=76]
[ext_resource path="res://assets/imgs/player/death_1.png" type="Texture" id=77]
[ext_resource path="res://assets/imgs/player/death_4.png" type="Texture" id=78]
[ext_resource path="res://assets/audio/sfx/player/death.wav" type="AudioStream" id=79]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 4 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 24 ), ExtResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 78 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 8 ) ],
"loop": true,
"name": "revive",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "ball",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 30 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 34 ), ExtResource( 22 ) ],
"loop": true,
"name": "swimming",
"speed": 10.0
}, {
"frames": [ ExtResource( 73 ), ExtResource( 69 ), ExtResource( 74 ), ExtResource( 67 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 68 ) ],
"loop": true,
"name": "warp",
"speed": 10.0
}, {
"frames": [ ExtResource( 40 ) ],
"loop": true,
"name": "smol_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 47 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": true,
"name": "smol_idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 51 ), ExtResource( 53 ), ExtResource( 50 ), ExtResource( 52 ), ExtResource( 54 ), ExtResource( 57 ), ExtResource( 55 ) ],
"loop": true,
"name": "smol_running",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 3 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "running",
"speed": 10.0
}, {
"frames": [ ExtResource( 42 ) ],
"loop": true,
"name": "smol_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 64 ) ],
"loop": true,
"name": "smol_fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 61 ), ExtResource( 66 ), ExtResource( 65 ) ],
"loop": true,
"name": "smol_to_boi",
"speed": 10.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 62 ), ExtResource( 58 ), ExtResource( 63 ) ],
"loop": true,
"name": "smol_to_ball",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 10 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "to_ball",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 11 ), ExtResource( 28 ), ExtResource( 9 ) ],
"loop": true,
"name": "to_boi",
"speed": 10.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 24 )

[node name="Klay" type="KinematicBody2D" groups=[
"Savable",
]]
light_mask = 2
collision_mask = 2
script = ExtResource( 29 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 16, 22 )
frames = SubResource( 1 )
animation = "revive"
frame = 3

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BoundDetect" type="Area2D" parent="."]
visible = false
collision_mask = 0

[node name="BoundBox" type="CollisionShape2D" parent="BoundDetect"]
position = Vector2( 16, 26 )
shape = SubResource( 3 )

[node name="Step" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 37 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 39 )

[node name="Land" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 38 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 79 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
